# trace-sanitizer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/skills/safety-dataclaw/: SKILL.md
.claude/skills/trace-sanitizer/: SKILL.md
.github/workflows/: publish.yml
safety_dataclaw/: __init__.py  cli.py  config.py  secrets.py  traced_api.py
safety_dataclaw/data/: SKILL.md
server/: app.py
tests/: conftest.py  test_anonymizer.py  test_cli.py  test_config.py  test_parser.py  test_secrets.py  test_server.py  test_traced_api.py
trace_sanitizer/: __init__.py  anonymizer.py  cli.py  config.py  menu.py  parser.py  secrets.py
trace_sanitizer/data/: LICENSE-CDLA-Permissive-2.0.md
