[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-dataclaw"
version = "0.1.0"
description = "Sanitize and upload AI agent trajectories to traced.run"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["claude-code", "traced", "safety", "trajectories", "sanitization"]
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
safety-dataclaw = "safety_dataclaw.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/JoachimSchaeffer/safety-dataclaw"
Repository = "https://github.com/JoachimSchaeffer/safety-dataclaw"
Issues = "https://github.com/JoachimSchaeffer/safety-dataclaw/issues"
