[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-sanitizer"
version = "0.1.0"
description = "Sanitize AI agent trajectories for traced.run"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["claude-code", "traced", "safety", "trajectories", "sanitization"]
dependencies = []

[project.scripts]
trace-sanitizer = "trace_sanitizer.cli:main"

[project.optional-dependencies]
dev = ["pytest", "fastapi", "httpx"]

[tool.setuptools.packages.find]
include = ["trace_sanitizer*"]

[tool.setuptools.package-data]
trace_sanitizer = ["data/*.md"]

[project.urls]
Homepage = "https://github.com/JoachimSchaeffer/trace-sanitizer"
Repository = "https://github.com/JoachimSchaeffer/trace-sanitizer"
Issues = "https://github.com/JoachimSchaeffer/trace-sanitizer/issues"
